# qt-inventory-app

./: .gitignore  CMakeLists.txt  README.md  config.json
lang/: en.json
src/: main.cpp
src/config/: AppConfig.cpp  AppConfig.h  LanguageManager.cpp  LanguageManager.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/models/: ActiveComponent.cpp  ActiveComponent.h  CategoryInfo.h  Component.cpp  Component.h  PassiveComponent.cpp  PassiveComponent.h
src/ui/: CategoryDialog.cpp  CategoryDialog.h  ComponentDialog.cpp  ComponentDialog.h  ComponentTableModel.cpp  ComponentTableModel.h  MainWindow.cpp  MainWindow.h
